<resources>
    <string name="app_name">SimpleWidget</string>
    <string name="cat_calendar_widget">Just calendar widget</string>
    <string name="one_cute_cat_a_day">Get doze of cute picture</string>
    <string name="meow">Meow</string>
    <string name="created_with_aws_random_cat">Cat API: Images from \"aws.random.cat\"</string>
    <string name="created_with_aws_random_dog">Dog API: Images from \"dog.ceo\"</string>
    <string name="created_with_aws_random_anime">Anime API: Images from \"api.waifu.pics\"</string>
    <string name="use_full_month">Show full month</string>
    <string name="random">Random</string>
    <string name="i_need_more_time_to_load_cats">I need more time…</string>
    <string name="something_strange_please_reload_me_3">Something strange, please reload me :3</string>
    <string name="can_t_load_image"><![CDATA[Can\'t connect server \n Try again later :<]]></string>
    <string name="show_reload_in_widget">Update image on tap</string>
    <string name="reload_desc_1">Tap widget to sync with app</string>
    <string name="reload_desc_2">Tap widget to update image</string>
    <string name="information">Information</string>
    <string name="updating">Updating background</string>
    <string name="syncing">Syncing with app</string>
    <string name="also_try_my_other_app">Also try my password manager:</string>
    <string name="open_calendar_on_tap">Open calendar on tap</string>
    <string name="image_preview">Cat or dog image preview</string>
    <string name="category">Categories</string>
    <string name="restricted" translatable="false">18+</string>
    <string name="anime_categories">Anime categories</string>
    <string name="dismiss">Dismiss</string>
</resources>