<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cCategory">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black">

                    <androidx.core.widget.ContentLoadingProgressBar
                        android:id="@+id/pbLoading"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivImagePreview"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:adjustViewBounds="true"
                        android:alpha="0.7"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tvTextDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:alpha="0.9"
                        android:textColor="@color/white"
                        android:textSize="35sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="14" />

                    <TextView
                        android:id="@+id/tvTextMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:alpha="0.9"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/tvTextDay"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="May" />

                    <ImageView
                        android:id="@+id/warnImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:contentDescription="@string/can_t_load_image"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/ivImagePreview"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/ivImagePreview"
                        app:srcCompat="@drawable/ic_baseline_warning_amber_24"
                        app:tint="@color/white"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/warnText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/can_t_load_image"
                        android:textColor="@color/white"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/warnImage"
                        tools:visibility="visible" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/cat_calendar_widget"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/one_cute_cat_a_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/created_with_aws_random_cat"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <LinearLayout
                android:id="@+id/llServersSwitcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSummary">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvCat"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="30dp">

                    <ImageView
                        android:id="@+id/ivCat"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/cat_face" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvDog"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="30dp">

                    <ImageView
                        android:id="@+id/ivDog"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/dog_face" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvAnime"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="30dp">

                    <ImageView
                        android:id="@+id/ivAnime"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/girl_face" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <com.google.android.material.chip.Chip
                android:id="@+id/cCategory"
                style="@style/Widget.Material3.Chip.Suggestion"
                android:checkable="false"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/category"
                app:layout_constraintTop_toBottomOf="@id/llServersSwitcher"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/cRestricted"
                style="@style/Widget.Material3.Chip.Suggestion"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/restricted"
                app:layout_constraintTop_toBottomOf="@id/llServersSwitcher"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/use_full_month"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvMonth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvMonth" />

            <TextView
                android:id="@+id/tvReload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/show_reload_in_widget"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOpenCalendar" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sReload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/tvReload"
                app:layout_constraintEnd_toEndOf="@+id/sMonth"
                app:layout_constraintTop_toTopOf="@+id/tvReload" />

            <TextView
                android:id="@+id/tvOpenCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/open_calendar_on_tap"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMonth" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sOpenCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/tvOpenCalendar"
                app:layout_constraintEnd_toEndOf="@+id/sMonth"
                app:layout_constraintTop_toTopOf="@+id/tvOpenCalendar" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/reload_desc_1"
                app:layout_constraintStart_toStartOf="@+id/tvReload"
                app:layout_constraintTop_toBottomOf="@+id/tvReload"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/i_need_more_time_to_load_cats"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDesc"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!-- FABs -->

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:contentDescription="@string/meow"
        android:text="@string/random"
        app:icon="@drawable/ic_baseline_autorenew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:contentDescription="@string/information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_outline_info" />

</androidx.constraintlayout.widget.ConstraintLayout>