<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat_calendar_widget"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_icon" />

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/one_cute_cat_a_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/dogApi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/created_with_aws_random_dog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSummary" />

    <TextView
        android:id="@+id/catApi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/created_with_aws_random_cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dogApi" />

    <TextView
        android:id="@+id/animeApi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/created_with_aws_random_anime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catApi" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tvAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animeApi"
        app:layout_constraintVertical_bias="1.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvGitHub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            app:cardCornerRadius="@dimen/standard_corner_radius"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/social"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/social">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/about_small_icon_size"
                    android:layout_height="@dimen/about_small_icon_size"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/small_margin"
                    app:srcCompat="@drawable/github"
                    app:tint="@color/white"
                    android:importantForAccessibility="no" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            app:cardCornerRadius="@dimen/standard_corner_radius"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toTopOf="@+id/author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvGitHub">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivTelegram"
                    android:layout_width="@dimen/about_small_icon_size"
                    android:layout_height="@dimen/about_small_icon_size"
                    android:layout_margin="@dimen/small_margin"
                    app:srcCompat="@drawable/ic_contact_telegram"
                    android:importantForAccessibility="no" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/about_icon"
        android:layout_width="@dimen/about_icon_size"
        android:layout_height="@dimen/about_icon_size"
        android:layout_marginTop="@dimen/huge_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/launcher_icon"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/about_bottom_margin"
        android:text="@string/version_and_year"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/app_author"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>